Putting XUL prototype elements on a diet. Bug 26429. r=ben, sr=brendan